src/objects/Retail_Outlook__c.object
<CustomObject>
    <fields>
        <fullName>Business_Ops_View__c</fullName>
        <formula>HYPERLINK(&quot;/apex/gblite__Grid?gname=Retail Business Ops Lines&amp;fpf=Retail_Outlook__c&amp;fpv=&quot; &amp; Id&amp; &quot;&amp;sh=1&amp;ssb=0&amp;sbb=0&quot;, &quot;Business Ops&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Ops View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outlook_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Outlook Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Forecast__c</fullName>
        <label>Retail Forecast</label>
        <referenceTo>Retail_Forecast__c</referenceTo>
        <relationshipLabel>Retail Outlooks</relationshipLabel>
        <relationshipName>Retail_Outlooks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Week_Number__c</fullName>
        <label>Week Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Week_Start_Date__c</fullName>
        <description>Used for identifying week number from the the beginning of the year</description>
        <label>Week Start Date</label>
        <type>Date</type>
    </fields>
    <label>Mobility Outlook</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Business_Ops_View__c</columns>
        <columns>Week_Number__c</columns>
        <columns>Retail_Forecast__c</columns>
        <columns>Week_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Retail Outlook Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobility Outlooks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>